--- a/css/archivo-estilos.css
+++ b/css/archivo-estilos.css
@@ -1,16 +1,23 @@
 * {
-font-family: 'Courier New', Courier, monospace;
-
+    font-family: 'Courier New', Courier, monospace;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;    
+}
+html{
+    height:100%;
+    min-height: 100vh;  
 }
 
-.container {
-    max-width:100%;
+body {
+    min-height: 100vh;   
+}
+
     
 }
 .navbar {
-
-    background-color:#c269a7;
-    
+    background-color:#000000;
+    max-width:auto ;    
 }
 .titulo{
     text-align: center;
@@ -20,8 +27,7 @@ font-family: 'Courier New', Courier, monospace;
     
     width:300px;
     height:300px;
-    border-radius:150px;
-    border:5px solid rgb(71, 71, 71)  
+    border-radius:150px;    
 }
 
 .centrar-contenido {
@@ -30,16 +36,16 @@ font-family: 'Courier New', Courier, monospace;
 }
 
  footer {
-    height: 75px;
+    
     text-align: center;
-    background-color: #c269a7;
+    background-color: #000000;
     color:#ffffff;
-    font-size: 1;
+    font-size: 18px;
 }
 
 .github, .linkedin, .correo, .curriculum{
     color:#ffffff;
-    font-size: 18; 
+    
 }
 
 form {
@@ -50,24 +56,23 @@ form {
 }
 
 .form-row {
-    margin-left: 25%;
-   
+    margin-left: 25%; 
 }
 
 #mensaje{
-
     height: 90px;
 }
 
 #btn-enviar{
 
-    background-color: #615e60;
+    background-color: #000000;
     margin-left: 25%;
 
 }
 
 .volver-inicio {
-    color:#c269a7;
+    color:#ffffff;
+    border-bottom: #000000;
 }
 
 
