--- a/css/archivo-estilos.css
+++ b/css/archivo-estilos.css
@@ -41,7 +41,7 @@ body {
     font-size: 18px;
 }
 
-.github, .linkedin, .correo, .curriculum{
+.github, .linkedin, .correo, .curriculum, .youtube{
     color:#ffffff;
     
 }
