--- a/css/archivo-estilos.css
+++ b/css/archivo-estilos.css
@@ -5,12 +5,13 @@
     box-sizing: border-box;    
 }
 html{
-    height:100%;
+    
     min-height: 100vh;  
 }
 
 body {
-    min-height: 100vh;   
+    background:linear-gradient(rgb(79, 13, 141), rgb(216, 15, 65), rgb(214, 51, 132));
+    
 }
 
 .navbar {
