--- a/css/archivo-estilos.css
+++ b/css/archivo-estilos.css
@@ -30,6 +30,10 @@ body {
     border-radius:150px;    
 }
 
+b {
+    color: black;
+}
+
 .centrar-contenido {
     text-align:center;
     display:block;
